Ajustes en la validación de stock y errores de tipeo

--- a/home/productos/index.html
+++ b/home/productos/index.html
@@ -108,7 +108,7 @@
             <select id="metodoPago" name="metodosDePago">
                 <option value="efectivo">Efectivo</option>
                 <option value="tarjetaCredito">Tarjeta de Crédito en cuotas</option>
-                <option value="tarjetaDebito">Tarjeda de Débito</option>
+                <option value="tarjetaDebito">Tarjeta de Débito</option>
             </select>
             <button id="confirmarCompra">Confirmar Compra</button>
             <p>El total es de $<span id="total"></span></p>
